RESOLVED FIXED49359
[chromium] Missing adoptPtr in GraphicsContext3DSkia.cpp
https://bugs.webkit.org/show_bug.cgi?id=49359
Summary [chromium] Missing adoptPtr in GraphicsContext3DSkia.cpp
Kenneth Russell
Reported 2010-11-10 19:22:50 PST
There's a missing adoptPtr in GraphicsContext3DSkia.cpp (GraphicsContext3D::getImageData) causing build failures in some situations.
Attachments
Patch (1.53 KB, patch)
2010-11-10 19:26 PST, Kenneth Russell
jamesr: review+
kbr: commit-queue-
Kenneth Russell
Comment 1 2010-11-10 19:26:39 PST
James Robinson
Comment 2 2010-11-11 13:01:27 PST
Comment on attachment 73570 [details] Patch R=me
Kenneth Russell
Comment 3 2010-11-11 13:05:50 PST
WebKit Review Bot
Comment 4 2010-11-11 14:03:12 PST
http://trac.webkit.org/changeset/71847 might have broken Leopard Intel Release (Tests) The following tests are not passing: fast/workers/storage/interrupt-database-sync.html
Note You need to log in before you can comment on or make changes to this bug.