2010-11-11  Kenneth Russell  <kbr@google.com>

Reviewed by James Robinson.

        [chromium] Missing adoptPtr in GraphicsContext3DSkia.cpp
        https://bugs.webkit.org/show_bug.cgi?id=49359

        * platform/graphics/skia/GraphicsContext3DSkia.cpp:
        (WebCore::GraphicsContext3D::getImageData):


git-svn-id: svn://svn.chromium.org/blink/trunk@71847 bbb929c8-8fbe-4397-9dbb-9b2b20218538