third_party/WebKit/WebCore/platform/graphics/skia/GraphicsContext3DSkia.cpp
@@ -34,6 +34,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Image.h"
 #include "ImageSource.h"
 #include "NativeImageSkia.h"
+#include <wtf/OwnPtr.h>
+#include <wtf/PassOwnPtr.h>
 
 #include <algorithm>
 
@@ -56,7 +58,7 @@ bool GraphicsContext3D::getImageData(Image* image,
         if (!decoder.frameCount() || !decoder.frameIsCompleteAtIndex(0))
             return false;
         bool hasAlpha = decoder.frameHasAlphaAtIndex(0);
-        pixels = decoder.createFrameAtIndex(0);
+        pixels = adoptPtr(decoder.createFrameAtIndex(0));
         if (!pixels.get() || !pixels->isDataComplete() || !pixels->width() || !pixels->height())
             return false;
         SkBitmap::Config skiaConfig = pixels->config();
